Dynamic application analysis OWASP

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,3 +41,12 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=12Ashish1234_gitactions-tutorial
+
+    - name: Start your service and add JDK 17
+      run: mvn spring-boot:run &
+
+    - name: ZAP Scan
+      uses: zaproxy/action-full-scan@v0.4.0
+      with:
+        token: ${{ secrets.GITHUB_TOKEN}}
+        target: 'https://www.zaproxy.org/'
